further work on audio vocoder GAN training

--- a/optuna.ipynb
+++ b/optuna.ipynb
@@ -27,21 +27,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "[I 2025-11-28 21:55:52,709] A new study created in RDB with name: vocoder_v13\n"
+            "[I 2025-11-29 00:17:55,400] A new study created in RDB with name: vocoder_v14\n"
           ]
         },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Study 'vocoder_v13' loaded/created with 0 existing trials\n"
+            "Study 'vocoder_v14' loaded/created with 0 existing trials\n"
           ]
         }
       ],
@@ -49,7 +49,7 @@
         "import optuna\n",
         "\n",
         "DB_PATH = \"sqlite:///vocoder_study.db\"\n",
-        "STUDY_NAME = \"vocoder_v13\"\n",
+        "STUDY_NAME = \"vocoder_v14\"\n",
         "\n",
         "study = optuna.create_study(\n",
         "    study_name=STUDY_NAME,\n",
@@ -86,9 +86,6 @@
       "source": [
         "historical_trials = [\n",
         "    # {\"params\": {\"lr\": 1e-4, \"batch_size\": 32, \"weight_decay\": 1e-5}, \"values\": [SC, MagLoss, WaveL1, MelRecon, ComplexSTFT, GANLoss, FMLoss, DiscLoss]},\n",
-        "    {\"params\": {\"lr\": 0.0004827238320533371, \"batch_size\": 32, \"weight_decay\": 0.007709498399240456, \"sc_loss_weight\": 0.7477651161998835, \"mag_loss_weight\": 2.8307514883247005, \"wave_l1_loss_weight\": 0.062224622626292095, \"mel_recon_loss_weight\": 0.8897692533857661, \"complex_stft_loss_weight\": 0.4694895194633577, \"gan_loss_weight\": 0.5322976549045951, \"feature_matching_loss_weight\": 1.8543398400790423, \"discriminator_lr\": 0.00044621946542211467, \"gan_start_step\": 0.40622545454545454}, \"values\": [18.440459689696965]},\n",
-        "    {\"params\": {\"lr\": 0.00018346389742578256, \"batch_size\": 32, \"weight_decay\": 0.0001534769740561332, \"sc_loss_weight\": 0.8724319318230576, \"mag_loss_weight\": 0.909418107539184, \"wave_l1_loss_weight\": 1.354003112965936, \"mel_recon_loss_weight\": 0.5752325293116073, \"complex_stft_loss_weight\": 1.2889143183602148, \"gan_loss_weight\": 0.6470822024825159, \"feature_matching_loss_weight\": 0.9118955145962234, \"discriminator_lr\": 0.00032449197716355254, \"gan_start_step\": 0.5440039771703308}, \"values\": [11.359550138181817]},\n",
-        "    {\"params\": {\"lr\": 0.0007105249615645953, \"batch_size\": 64, \"weight_decay\": 0.00012551252892016514, \"sc_loss_weight\": 0.991773834269867, \"mag_loss_weight\": 1.8910770223024658, \"wave_l1_loss_weight\": 0.1930552779587998, \"mel_recon_loss_weight\": 0.28391407602588115, \"complex_stft_loss_weight\": 1.6401797894429857, \"gan_loss_weight\": 0.5324566225883319, \"feature_matching_loss_weight\": 2.5544041807691356, \"discriminator_lr\": 0.0009555942265828252, \"gan_start_step\": 0.4946179393972899}, \"values\": []},\n",
         "]\n",
         "\n",
         "if historical_trials:\n",
@@ -164,14 +161,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "total_steps: 103125.0 --gan_start_step 56100\n"
+            "total_steps: 51562.5 --gan_start_step 25503\n"
           ]
         }
       ],
@@ -188,7 +185,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Compute Restult Scores"
+        "## Compute Result Scores"
       ]
     },
     {
