added phase-intransitive criteria for vocoder, reimplemented mel_recon_loss and added performance measures

--- a/optuna.ipynb
+++ b/optuna.ipynb
@@ -27,14 +27,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "[I 2025-11-29 00:17:55,400] A new study created in RDB with name: vocoder_v14\n"
+            "/home/zadar/dev/projects/megatransformer/venv/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+            "  from .autonotebook import tqdm as notebook_tqdm\n",
+            "[I 2025-12-01 04:39:10,220] Using an existing study with name 'vocoder_v14' instead of creating a new one.\n"
           ]
         },
         {
